2011-12-4
add switch system to duokan lite
edit finance.py --> temple is user-part string
add changelog