@@ -2,7 +2,7 @@
 ;; Change the default system when roboot
 Shift Z = !/mnt/us/SotongDJ/file.sh boot2kindle &
 Shift Q = !/mnt/us/SotongDJ/file.sh boot2duokan &
-D K = !/mnt/us/SotongDJ/file.sh ch2duokan &
+;; D K = !/mnt/us/SotongDJ/file.sh ch2duokan &
 ;;
 ;; Test
 T P = !/mnt/us/SotongDJ/test.sh python &
