@@ -1,3 +1,6 @@
+2011-12-5
+mark ch2duokan as experiment
+
 2011-12-4
 add switch system to duokan lite
 edit finance.py --> temple is user-part string
